[tool.poetry]
name = "caesar_cipher"
version = "0.1.0"
description = ""
authors = ["Dana Kiswani <danakiswani0@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
nltk = "^3.5"
words = "^0.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
